--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
+    "sharp": "^0.33.2",
     "socket.io": "^4.7.2",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
