--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.9.2",
     "morgan": "1.10.0",
