--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.39.0",
     "cors": "2.8.5",
