--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^1.39.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "express-session": "^1.17.3",
