--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.4",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
